# shayda

./: README.md  pyproject.toml
src/shayda/: Correspondence_andy.docx  Correspondence_shayda.docx  __init__.py  client_data.xlsx  letter_template.docx  office.py  outlook_email.py
